<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kangaroo</string>
    <string name="btn_import_from_phone">List From Phone</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_import_from_server">Fetch From Server</string>
    <string name="lbl_user_name">Username</string>
    <string name="lbl_pass_word">Password</string>
    <string name="txt_pass_word"></string>
    <string name="txt_confirm_password"></string><string name="cmd_signin">Sign In</string>
    <string name="lbl_confirm_password">Confirm</string>
    <string name="cmd_signup">Sign Up</string>
    
    
    <string name="txt_about"><b>This is simpl contact backup application</b>
        More information about this applicatinon can be obtained at<i><u>http://www.kangaroo.com</u></i>
        In fact Development is in progress................</string>
    <string name="btn_send">Backup To Server</string>
    <string name="txt_user_name" />
    <string name="txt_signup_confirm_password" />
    <string name="cmd_call">Call</string>
    
</resources>