<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Fill the form.."
            android:textColor="@color/button_font_color"
            android:textSize="@dimen/Icon_Font_Size"
            android:typeface="serif" />

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="287dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lble_user_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_name" />

            <EditText
                android:id="@+id/txt_signin_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_pass_word" />

            <EditText
                android:id="@+id/txt_signin_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:text="@string/lbl_confirm_password" />

        <EditText
            android:id="@+id/txt_signin_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:ems="10"
            android:inputType="textPassword"
            android:text="@string/txt_confirm_password" >
        </EditText>
    </LinearLayout>

<Button
    android:id="@+id/btn_sign_in"
    android:layout_width="158dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/road_sign"
    android:text="@string/cmd_signin"
    android:textColor="@color/signin"
    android:textSize="@dimen/Icon_Font_Size" />

</LinearLayout>

</LinearLayout>